Very minor change

--- a/01-basics.Rmd
+++ b/01-basics.Rmd
@@ -1,4 +1,4 @@
-# The basics {#basics}
+# The R basics {#basics}
 
 ```{r include=FALSE}
 # Every file must contain at least one R chunk due to the linting process.
@@ -309,3 +309,4 @@ typeof(c(9.9, 3L, TRUE))
 typeof(c(3L, TRUE))
 typeof(TRUE)
 ```
+
