--- a/packages.bib
+++ b/packages.bib
@@ -3,175 +3,37 @@
   author = {{R Core Team}},
   organization = {R Foundation for Statistical Computing},
   address = {Vienna, Austria},
-  year = {2020},
+  year = {2021},
   url = {https://www.R-project.org/},
-}
-
-@Manual{R-bigrquery,
-  title = {bigrquery: An Interface to Google's BigQuery 'API'},
-  author = {Hadley Wickham and Jennifer Bryan},
-  year = {2020},
-  note = {R package version 1.3.2},
-  url = {https://github.com/r-dbi/bigrquery},
 }
 
 @Manual{R-bookdown,
   title = {bookdown: Authoring Books and Technical Documents with R Markdown},
   author = {Yihui Xie},
-  year = {2020},
-  note = {R package version 0.21},
-  url = {https://github.com/rstudio/bookdown},
-}
-
-@Manual{R-DBI,
-  title = {DBI: R Database Interface},
-  author = {{R Special Interest Group on Databases (R-SIG-DB)} and Hadley Wickham and Kirill Müller},
-  year = {2021},
-  note = {https://dbi.r-dbi.org, https://github.com/r-dbi/DBI},
-}
-
-@Manual{R-dbplyr,
-  title = {dbplyr: A dplyr Back End for Databases},
-  author = {Hadley Wickham and Maximilian Girlich and Edgar Ruiz},
-  year = {2021},
-  note = {https://dbplyr.tidyverse.org/, https://github.com/tidyverse/dbplyr},
+  year = {2022},
+  note = {https://github.com/rstudio/bookdown},
 }
 
 @Manual{R-dplyr,
   title = {dplyr: A Grammar of Data Manipulation},
   author = {Hadley Wickham and Romain François and Lionel Henry and Kirill Müller},
-  year = {2021},
-  note = {https://dplyr.tidyverse.org, https://github.com/tidyverse/dplyr},
-}
-
-@Manual{R-DT,
-  title = {DT: A Wrapper of the JavaScript Library DataTables},
-  author = {Yihui Xie and Joe Cheng and Xianying Tan},
-  year = {2021},
-  note = {R package version 0.17},
-  url = {https://github.com/rstudio/DT},
-}
-
-@Manual{R-forcats,
-  title = {forcats: Tools for Working with Categorical Variables (Factors)},
-  author = {Hadley Wickham},
-  year = {2021},
-  note = {https://forcats.tidyverse.org,
-https://github.com/tidyverse/forcats},
-}
-
-@Manual{R-fs,
-  title = {fs: Cross-Platform File System Operations Based on libuv},
-  author = {Jim Hester and Hadley Wickham},
-  year = {2020},
-  note = {http://fs.r-lib.org, https://github.com/r-lib/fs},
-}
-
-@Manual{R-ggplot2,
-  title = {ggplot2: Create Elegant Data Visualisations Using the Grammar of Graphics},
-  author = {Hadley Wickham and Winston Chang and Lionel Henry and Thomas Lin Pedersen and Kohske Takahashi and Claus Wilke and Kara Woo and Hiroaki Yutani and Dewey Dunnington},
-  year = {2020},
-  note = {https://ggplot2.tidyverse.org,
-https://github.com/tidyverse/ggplot2},
-}
-
-@Manual{R-haven,
-  title = {haven: Import and Export SPSS, Stata and SAS Files},
-  author = {Hadley Wickham and Evan Miller},
-  year = {2020},
-  note = {http://haven.tidyverse.org, https://github.com/tidyverse/haven,
-https://github.com/WizardMac/ReadStat},
-}
-
-@Manual{R-janitor,
-  title = {janitor: Simple Tools for Examining and Cleaning Dirty Data},
-  author = {Sam Firke},
-  year = {2021},
-  note = {R package version 2.1.0},
-  url = {https://github.com/sfirke/janitor},
-}
-
-@Manual{R-kableExtra,
-  title = {kableExtra: Construct Complex Table with kable and Pipe Syntax},
-  author = {Hao Zhu},
-  year = {2021},
-  note = {http://haozhu233.github.io/kableExtra/,
-https://github.com/haozhu233/kableExtra},
+  year = {2022},
+  note = {https://dplyr.tidyverse.org},
 }
 
 @Manual{R-knitr,
   title = {knitr: A General-Purpose Package for Dynamic Report Generation in R},
   author = {Yihui Xie},
-  year = {2021},
-  note = {R package version 1.31},
+  year = {2022},
+  note = {R package version 1.39},
   url = {https://yihui.org/knitr/},
-}
-
-@Manual{R-lubridate,
-  title = {lubridate: Make Dealing with Dates a Little Easier},
-  author = {Vitalie Spinu and Garrett Grolemund and Hadley Wickham},
-  year = {2021},
-  note = {R package version 1.7.10},
-  url = {https://CRAN.R-project.org/package=lubridate},
-}
-
-@Manual{R-purrr,
-  title = {purrr: Functional Programming Tools},
-  author = {Lionel Henry and Hadley Wickham},
-  year = {2020},
-  note = {http://purrr.tidyverse.org, https://github.com/tidyverse/purrr},
-}
-
-@Manual{R-readr,
-  title = {readr: Read Rectangular Text Data},
-  author = {Hadley Wickham and Jim Hester},
-  year = {2020},
-  note = {https://readr.tidyverse.org, https://github.com/tidyverse/readr},
-}
-
-@Manual{R-reshape2,
-  title = {reshape2: Flexibly Reshape Data: A Reboot of the Reshape Package},
-  author = {Hadley Wickham},
-  year = {2020},
-  note = {R package version 1.4.4},
-  url = {https://github.com/hadley/reshape},
 }
 
 @Manual{R-rmarkdown,
   title = {rmarkdown: Dynamic Documents for R},
   author = {JJ Allaire and Yihui Xie and Jonathan McPherson and Javier Luraschi and Kevin Ushey and Aron Atkins and Hadley Wickham and Joe Cheng and Winston Chang and Richard Iannone},
-  year = {2021},
-  note = {https://github.com/rstudio/rmarkdown,
-https://rmarkdown.rstudio.com/docs/},
-}
-
-@Manual{R-stringr,
-  title = {stringr: Simple, Consistent Wrappers for Common String Operations},
-  author = {Hadley Wickham},
-  year = {2019},
-  note = {http://stringr.tidyverse.org, https://github.com/tidyverse/stringr},
-}
-
-@Manual{R-tibble,
-  title = {tibble: Simple Data Frames},
-  author = {Kirill Müller and Hadley Wickham},
-  year = {2021},
-  note = {https://tibble.tidyverse.org/, https://github.com/tidyverse/tibble},
-}
-
-@Manual{R-tidyr,
-  title = {tidyr: Tidy Messy Data},
-  author = {Hadley Wickham},
-  year = {2020},
-  note = {https://tidyr.tidyverse.org, https://github.com/tidyverse/tidyr},
-}
-
-@Manual{R-tidyverse,
-  title = {tidyverse: Easily Install and Load the Tidyverse},
-  author = {Hadley Wickham},
-  year = {2019},
-  note = {http://tidyverse.tidyverse.org,
-https://github.com/tidyverse/tidyverse},
+  year = {2022},
+  note = {https://github.com/rstudio/rmarkdown},
 }
 
 @Book{bookdown2016,
@@ -181,16 +43,7 @@ https://github.com/tidyverse/tidyverse},
   address = {Boca Raton, Florida},
   year = {2016},
   note = {ISBN 978-1138700109},
-  url = {https://github.com/rstudio/bookdown},
-}
-
-@Book{ggplot22016,
-  author = {Hadley Wickham},
-  title = {ggplot2: Elegant Graphics for Data Analysis},
-  publisher = {Springer-Verlag New York},
-  year = {2016},
-  isbn = {978-3-319-24277-4},
-  url = {https://ggplot2.tidyverse.org},
+  url = {https://bookdown.org/yihui/bookdown},
 }
 
 @Book{knitr2015,
@@ -215,28 +68,6 @@ https://github.com/tidyverse/tidyverse},
   url = {http://www.crcpress.com/product/isbn/9781466561595},
 }
 
-@Article{lubridate2011,
-  title = {Dates and Times Made Easy with {lubridate}},
-  author = {Garrett Grolemund and Hadley Wickham},
-  journal = {Journal of Statistical Software},
-  year = {2011},
-  volume = {40},
-  number = {3},
-  pages = {1--25},
-  url = {https://www.jstatsoft.org/v40/i03/},
-}
-
-@Article{reshape22007,
-  title = {Reshaping Data with the {reshape} Package},
-  author = {Hadley Wickham},
-  journal = {Journal of Statistical Software},
-  year = {2007},
-  volume = {21},
-  number = {12},
-  pages = {1--20},
-  url = {http://www.jstatsoft.org/v21/i12/},
-}
-
 @Book{rmarkdown2018,
   title = {R Markdown: The Definitive Guide},
   author = {Yihui Xie and J.J. Allaire and Garrett Grolemund},
@@ -255,16 +86,5 @@ https://github.com/tidyverse/tidyverse},
   year = {2020},
   note = {ISBN 9780367563837},
   url = {https://bookdown.org/yihui/rmarkdown-cookbook},
-}
-
-@Article{tidyverse2019,
-  title = {Welcome to the {tidyverse}},
-  author = {Hadley Wickham and Mara Averick and Jennifer Bryan and Winston Chang and Lucy D'Agostino McGowan and Romain François and Garrett Grolemund and Alex Hayes and Lionel Henry and Jim Hester and Max Kuhn and Thomas Lin Pedersen and Evan Miller and Stephan Milton Bache and Kirill Müller and Jeroen Ooms and David Robinson and Dana Paige Seidel and Vitalie Spinu and Kohske Takahashi and Davis Vaughan and Claus Wilke and Kara Woo and Hiroaki Yutani},
-  year = {2019},
-  journal = {Journal of Open Source Software},
-  volume = {4},
-  number = {43},
-  pages = {1686},
-  doi = {10.21105/joss.01686},
 }
 
