--- a/02-data-import.Rmd
+++ b/02-data-import.Rmd
@@ -187,7 +187,7 @@ DT::datatable(data = pokemon)
 
 Note that the `regex` argument in `fs::dir_ls` is applied to the full file path so if I had tried to specify that the file name starts with "pokemon" by front anchoring it using "^pokemon" this would return no results, since the full name is actually "data/pokemon...". Helpful regex links below.
 
-[regex cheatsheet](https://www.rstudio.com/wp-content/uploads/2016/09/RegExCheatsheet.pdf)
+[regex cheatsheet](https://raw.githubusercontent.com/rstudio/cheatsheets/main/strings.pdf)
 
 [stringr cheatsheet including regex](http://edrub.in/CheatSheets/cheatSheetStringr.pdf)
 
